--- a/dashboard-app/package.json
+++ b/dashboard-app/package.json
@@ -14,12 +14,22 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-select": "^4.0.17",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.11",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "redux": "^4.1.1",
+    "redux-dynamic-modules": "^5.2.3",
+    "redux-dynamic-modules-saga": "5.2.3",
+    "redux-dynamic-modules-thunk": "5.2.3",
+    "redux-logger": "4.0.0",
+    "redux-saga": "1.1.3",
+    "redux-thunk": "2.3.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
